# qr-man

./: .clangd  .gitignore  CMakeLists.txt  README.md
core/: CMakeLists.txt
core/src/: Image.cpp  Image.h  Reader.cpp  Reader.h
example/: main.cpp
